# bit-array

./: CMakeLists.txt  README.md  build_script.sh
src/: bit_array.c  bit_array.h  main.c
tests/: 12_year_span.c  basic_test.c  intersection.c  test_inputs.c  test_lifecycle.c  test_operations.c  test_queries.c  test_setters.c  test_utils.h
